[tool.poetry]
name = "twc-cli"
version = "1.1.0"
description = "Timeweb Cloud Command Line Interface."
authors = ["ge <dev@timeweb.cloud>"]
homepage = "https://github.com/timeweb-cloud/twc"
repository = "https://github.com/timeweb-cloud/twc"
license="MIT"
readme = "README.md"
include = ["CHANGELOG.md", "COPYING"]
packages = [
    { include = "twc", from = "." }
]

[tool.poetry.dependencies]
python = "^3.7.9"
requests = "^2.28.1"
pygments = "^2.14.0"
click = "^8.1.3"
click-aliases = "^1.0.1"
toml = "^0.10.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.17.0"

[tool.poetry.scripts]
twc = 'twc.__main__:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-lines",
    "duplicate-code",
    "unused-argument",  # 'verbose' arg is OK
    "redefined-outer-name",
    "invalid-name",
]
