[tool.poetry]
name = "twc-cli"
version = "2.9.1"
description = "Timeweb Cloud Command Line Interface."
authors = ["ge <dev@timeweb.cloud>"]
homepage = "https://github.com/timeweb-cloud/twc"
repository = "https://github.com/timeweb-cloud/twc"
license="MIT"
readme = "README.md"
include = ["CHANGELOG.md", "COPYING"]
packages = [{ include = "twc", from = "." }]

[tool.poetry.dependencies]
python = "^3.8.19"
requests = "^2.32.3"
typer-slim = "^0.12.3"
shellingham = "^1.5.4"
colorama = "^0.4.6"
toml = "^0.10.2"
pyyaml = "^6.0.1"
pygments = "^2.18.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"

[tool.poetry.scripts]
twc = "twc.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "too-many-locals",
    "too-many-lines",
    "unused-argument",  # unused 'verbose' arg is OK
    "duplicate-code",
    "invalid-name",
    "missing-function-docstring",
]
